tests/rosetta/out/Haskell/call-a-function-5.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/call-a-function-5.hs:45:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/call-a-function-5.hs:40:1
                 /workspace/mochi/tests/rosetta/out/Haskell/call-a-function-5.hs:45:1
   |
45 | main = do
   | ^^^^
