tests/rosetta/out/Haskell/call-a-function-5.hs
-- Generated by Mochi compiler v0.10.26 on 2025-07-16T09:30:29Z
-- Code generated by Mochi compiler; DO NOT EDIT.
{-# LANGUAGE DeriveGeneric #-}

module Main where

import qualified Data.Map as Map
import Data.Maybe (fromMaybe)

data AnyValue = VInt Int | VDouble Double | VString String | VBool Bool deriving (Show)

_asInt :: AnyValue -> Int
_asInt (VInt n) = n
_asInt v = error ("expected int, got " ++ show v)

_asDouble :: AnyValue -> Double
_asDouble (VDouble d) = d
_asDouble v = error ("expected double, got " ++ show v)

_asString :: AnyValue -> String
_asString (VString s) = s
_asString v = error ("expected string, got " ++ show v)

_asBool :: AnyValue -> Bool
_asBool (VBool b) = b
_asBool v = error ("expected bool, got " ++ show v)

_showAny :: AnyValue -> String
_showAny (VInt n) = show n
_showAny (VDouble d) = show d
_showAny (VString s) = s
_showAny (VBool b) = if b then "true" else "false"

doIt :: Map.Map String Int -> Int
doIt p =
  fromMaybe (0) $
    (let b = 0 in case if _asBool (elem "b" p) then (let b = (p !! "b") in Nothing) else Nothing of Just v -> Just v; Nothing -> Just ((((p !! "a") + b) + (p !! "c"))))

main :: ()
main =
  fromMaybe (()) $
    (let p = Map.fromList [] in (let p = Map.insert "a" 1 p in (let p = Map.insert "c" 9 p in (let _ = putStrLn (show doIt p) in Nothing))))

main :: IO ()
main = do
  main
